<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Калькулятор</string>
    <string name="credit">Кредит</string>
    <string name="nav_background">nav_background</string>
    <string name="settings">Настройки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="comma">,</string>
    <string name="double_zero">00</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">–</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="clear">С</string>
    <string name="brackets">⁽⁾</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
</resources>